@@ -1,3 +1,21 @@
+// jTDS JDBC Driver for Microsoft SQL Server and Sybase
+// Copyright (C) 2004 The jTDS Project
+//
+// This library is free software; you can redistribute it and/or
+// modify it under the terms of the GNU Lesser General Public
+// License as published by the Free Software Foundation; either
+// version 2.1 of the License, or (at your option) any later version.
+//
+// This library is distributed in the hope that it will be useful,
+// but WITHOUT ANY WARRANTY; without even the implied warranty of
+// MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
+// Lesser General Public License for more details.
+//
+// You should have received a copy of the GNU Lesser General Public
+// License along with this library; if not, write to the Free Software
+// Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
+//
+
 package net.sourceforge.jtds.test;
 
 import net.sourceforge.jtds.jdbc.NtlmAuth;
@@ -6,7 +24,9 @@ import java.util.Arrays;
 
 /**
  * Unit test for NTLM challenge/response calculation
- * Written by mdb.
+ *
+ * @author mdb
+ * @version $Id: NtlmAuthTest.java,v 1.5.2.1 2009-08-04 10:33:54 ickzon Exp $
  */
 public class NtlmAuthTest extends TestBase {
     public NtlmAuthTest(String name) {
